Fix review comments

--- a/app/views/documentation/documents/_list.html.erb
+++ b/app/views/documentation/documents/_list.html.erb
@@ -29,7 +29,7 @@
         <%= render(Bali::DeleteLink::Component.new(
             href: page_document_path(@page, document),
             name: render(Bali::Icon::Component.new('trash')),
-            confirm: 'Are you sure')) %>
+            confirm: 'Are you sure?')) %>
       </td>
     <% end %>
   <% end %>
