Functionality to upload files (#62)
* Finish add Documents

* Finish add documents

* Ignoring .DS_Store

* removing DSStore

* Use bali level and clean code

* Fix review

* Fix review comments

* Fix review comments with removing spaces and typo on specs names

* Fix some test and new code

--- a/app/views/documentation/pages/edit.html.erb
+++ b/app/views/documentation/pages/edit.html.erb
@@ -1,22 +1,26 @@
 <%= render 'documentation/workspaces/menu', pages: @root_pages %>
 
-<div class="level">
-  <div class="level-left">
-    <nav class="breadcrumb" aria-label="breadcrumbs">
-      <ul>
-        <li><%= link_to render(Bali::Icon::Component.new('chevron-left')) + 'Cancel', workspace_page_path(@workspace, @page) %></li>
-      </ul>
-    </nav>
-  </div>
-
-  <div class="level-right">
-    <%= link_to page_images_path(@page), class: 'button is-primary',
-        data: { action: 'modal#open', 'wrapper-class': 'extra-wide' } do %>
-      <%= render Bali::Icon::Component.new('image') %>
-      <span>Images</span>
+<%= render (Bali::Level::Component.new) do |c| %>
+  <% c.left do |l| %>
+    <%= l.item do %>
+      <%= tag.nav class: 'breadcrumb', aria: { label: 'breadcrumbs' } do %>
+        <ul>
+          <li>
+            <%= link_to render(Bali::Icon::Component.new('chevron-left')) + t('cancel'), workspace_page_path(@workspace, @page) %>
+          </li>
+        </ul>
+      <% end %>
     <% end %>
-  </div>
-</div>
+  <% end %>
+
+  <% c.right do |r| %>
+    <%= link_to page_files_path(@page), class: 'button is-primary',
+        data: { action: 'modal#open', 'wrapper-class': 'extra-wide' } do %>
+      <%= render Bali::Icon::Component.new('images') %>
+      <span><%= "#{t('documentation.page.files')}" %></span>
+    <% end %>
+  <% end %>
+<% end %>
 
 <%= render "form", page: @page %>
 
