--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -90,10 +90,10 @@
 
 // Bali Styles
 @import 'bali/card/index';
-@import 'bali/help_tip/index';
 @import 'bali/icon/index';
 @import 'bali/image_grid/index';
 @import 'bali/modal/index';
 @import 'bali/notification/index';
 @import 'bali/tabs/index';
+@import 'bali/tooltip/index';
 @import 'bali/tree_view/index';
