Add css from bali

--- a/app/assets/stylesheets/documentation/application.scss
+++ b/app/assets/stylesheets/documentation/application.scss
@@ -79,7 +79,6 @@
 // Engine styles
 //
 @import 'general';
-@import 'rich_text_editor';
 @import 'page_menu';
 @import 'layout';
 @import 'permissions';
@@ -90,6 +89,7 @@
 @import 'bali/image_grid/index';
 @import 'bali/modal/index';
 @import 'bali/notification/index';
+@import 'bali/rich_text_editor/index';
 @import 'bali/tabs/index';
 @import 'bali/tooltip/index';
 @import 'bali/tree_view/index';
