--- a/app/views/layouts/documentation/print.html.erb
+++ b/app/views/layouts/documentation/print.html.erb
@@ -4,11 +4,9 @@
     <title>Documentation</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "documentation/application", media: "all" %>
-    <%= javascript_include_tag "documentation/application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_importmap_tags %>
   </head>
-
   <body>
     <div>
       <section>
